# revlogica-nlp-microservice

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
