# =====================================
# This file is part of the CodeDev project
# Author: Ricel Quispe
# =====================================

[tool.poetry]
name = "nlp_microservice"
version = "0.1.0"
description = "NLP microservice for the RevLogica project."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.116.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
spacy = "^3.8.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"